# andromeda

./: .env.example  .env.mock  .gitattributes  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  MIGRATION-WAILS.md  README.md  Taskfile.yml  eslint.config.js  go.mod  go.sum  index.html  main.go  node_modules  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  tokens.go  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
.task/checksum/: build-frontend--DEV--RUNNER-pnpm-  darwin-common-generate-bindings  darwin-common-generate-icons  darwin-common-install-frontend-deps-pnpm
docs/: DESIGN-PHILOSOPHY.md  DESIGN.md  MONOREPO-MIGRATION.md  UI-UX.md
docs/migration/: README.md  release-please.md  workflows.md
scripts/: bump-version.mjs  bump-version.test.ts  gen-wire.mjs
src/: App.test.tsx  App.tsx  aiText.test.ts  aiText.ts  authProvider.ts  cachedList.test.ts  cachedList.ts  chatParts.test.ts  chatParts.ts  dataProvider.test.ts  dataProvider.ts  docStorage.ts  events.test.ts  events.ts  fleet.test.ts  fleet.ts  format.test.ts  format.ts  gateway.test.ts  gateway.ts  hooks.ts  listReorder.test.ts  listReorder.ts  log.test.ts  log.ts  mailChrome.test.ts  mailChrome.ts  main.tsx  resourceRefresh.test.ts  resourceRefresh.ts  resources.test.ts  resources.ts  rpcCache.test.ts  rpcCache.ts  sse.test.ts  sse.ts  storage.ts  styles.css  tauri.test.ts  tauri.ts  (+18 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+78 files in other folders)
