[package]
name = "andromeda"
version = "0.0.0"
description = "Andromeda — Deneb 데스크탑 워크스테이션"
edition = "2021"
rust-version = "1.77"

[lib]
name = "andromeda_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "3"
